classDiagram
    direction TB

    %% ── CLIENTE (código de uso en la parte superior) ──
    class Cliente {
        director = new DirectorDeCasas()
        builder = new CasaDeMaderaBuilder()
        director.setBuilder(builder)
        director.construirMansion()
        casa = builder.obtenerCasa()
    }

    %% ── DIRECTOR ──
    class DirectorDeCasas {
        ...
        +construirCabana() void
        +construirMansion() void
    }

    
    %% ── INTERFAZ BUILDER ──
    class CasaBuilder {
        <<interface>>
        +construirParedes() this
        +construirTecho() this
        +agregarPuertas(cantidad) this
        +agregarVentanas(cantidad) this
        +agregarPiscina() this
        +agregarJardin() this
        +agregarGaraje() this
        +obtenerCasa() Casa
    }

    %% ── BUILDER CONCRETO A ──
    class CasaDeMaderaBuilder {
        -casa: Casa
        +construirParedes() this
        +construirTecho() this
        +agregarPuertas(cantidad) this
        +agregarVentanas(cantidad) this
        +agregarPiscina() this
        +agregarJardin() this
        +agregarGaraje() this
        +obtenerCasa() Casa
    }

    
    %% ── BUILDER CONCRETO B ──
    class CasaDeDiamanteBuilder {
        -casa: Casa
        +construirParedes() this
        +construirTecho() this
        +agregarPuertas(cantidad) this
        +agregarVentanas(cantidad) this
        +agregarPiscina() this
        +agregarJardin() this
        +agregarGaraje() this
        +obtenerCasa() Casa
    }

    
    %% ── PRODUCTO ──
    class Casa {
        +paredes: string
        +techo: string
        +puertas: number
        +ventanas: number
        +piscina: boolean
        +jardin: boolean
        +garaje: boolean
        +describir() void
    }

    %% ── RELACIONES ──
    Cliente ..> DirectorDeCasas : usa
    Cliente ..> CasaBuilder : usa
    DirectorDeCasas o-- CasaBuilder : setBuilder()
    CasaBuilder <|.. CasaDeMaderaBuilder : implements
    CasaBuilder <|.. CasaDeDiamanteBuilder : implements
    CasaDeMaderaBuilder *-- Casa : crea
    CasaDeDiamanteBuilder *-- Casa : crea